superbitty/tests/ui/bitfields/shadowed_primitive.stderr
error[E0277]: the trait bound `u32: superbitty::raw::OnlyPrimitiveUnsignedIntegersAreAllowedAsBaseTypesForSuperbittyBitfields` is not satisfied
 --> tests/ui/bitfields/shadowed_primitive.rs:6:1
  |
6 | / bitfields! {
7 | |     struct Foo : u32 {}
8 | | }
  | |_^ the trait `superbitty::raw::OnlyPrimitiveUnsignedIntegersAreAllowedAsBaseTypesForSuperbittyBitfields` is not implemented for `u32`
  |
  = help: the following other types implement trait `superbitty::raw::OnlyPrimitiveUnsignedIntegersAreAllowedAsBaseTypesForSuperbittyBitfields`:
            u128
            u16
            u32
            u64
            u8
            usize
note: required by a bound in `Raw`
 --> src/raw.rs
  |
  | pub struct Raw<T: OnlyPrimitiveUnsignedIntegersAreAllowedAsBaseTypesForSuperbittyBitfields>(T);
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Raw`
  = note: this error originates in the macro `bitfields` (in Nightly builds, run with -Z macro-backtrace for more info)
